style fix: 1. remove white space by <body/>

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,11 @@ $middle-size-1: 1138px;
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 img {
   width: 100%;
 }
